<resources>
    <!-- App Launcher Name and Settings -->
    <string name="app_name">Activity Test</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="main_activity_title">Add Student</string>
    <string name="student_id_hint_text">Student ID</string>
    <string name="first_name_hint_text">First Name</string>
    <string name="last_name_hint_text">Last Name</string>
    <string name="add_student_button_text">Add New Student</string>
    <string name="view_all_student_button_text">View All Student</string>

    <!-- All Student List Activity -->
    <string name="view_all_student_list_title">View All Student</string>


    <string name="home_button_text">Home</string>
</resources>
